--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [build]
   command = "npm run build"
   publish = "build"
+  environment = { NODE_VERSION = "18" }
+
+[build.environment]
+  NODE_ENV = "production"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
