--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
@@ -13,6 +14,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/node-cron": "^3.0.11",
+    "@types/styled-components": "^5.1.34",
+    "antd": "^5.24.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
@@ -26,6 +29,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-semicircle-progressbar": "^1.1.0",
+    "styled-components": "^6.1.17",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.2",
