--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-semicircle-progressbar": "^1.1.0",
     "styled-components": "^6.1.17",
+    "swiper": "^11.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.2",
