--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.11.19",
     "@types/node-cron": "^3.0.11",
     "@types/styled-components": "^5.1.34",
     "antd": "^5.24.8",
+    "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
     "formik": "^2.4.5",
     "googleapis": "^133.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
@@ -62,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/react-redux": "^7.1.33",
