--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.11.19",
     "@types/node-cron": "^3.0.11",
+    "@types/react-input-mask": "^3.0.6",
     "@types/styled-components": "^5.1.34",
     "antd": "^5.24.8",
     "axios": "^1.9.0",
@@ -32,6 +33,7 @@
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
@@ -68,12 +70,15 @@
     ]
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/axios": "^0.9.36",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
-    "@types/yup": "^0.32.0"
+    "@types/yup": "^0.32.0",
+    "react-refresh": "^0.14.0",
+    "source-map": "^0.7.4"
   },
   "description": "A React-based application for managing Hajj and Umrah savings, package selection, and trip planning.",
   "main": "index.js",
